<resources>
    <string name="app_name">Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="expenser">Expenser</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile_picture">profile picture</string>
    <string name="validation_error">Validation Error</string>
    <string name="to_be_reimbursed">To be reimbursed</string>
    <string name="from">From</string>
    <string name="hyphen">-</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="merchant">Merchant</string>
    <string name="status">Status</string>
    <string name="new_cb">New</string>
    <string name="progress">In Progress</string>
    <string name="reimburse">Reimburse</string>
    <string name="validation_error_message">%1$s is not allowed to be empty! \nPlease provide an
        input then continue</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="done">Done</string>
    <string name="login_error_message">No employee with these credentials was found</string>
    <string name="login_message">Enter employee credentials</string>
    <string name="Total">total</string>
    <string name="comment">Comment</string>
    <string name="select_receipt">Select Receipt</string>
    <string name="save">save</string>
    <string name="crop_image">Crop</string>
    <string name="comment_hint">Comment…</string>
    <string name="add_expense">Add expense</string>
    <string name="add_employee">Create employee</string>
    <string name="home">Home</string>


    <string-array name="expenses">
        <item>Select Here</item>
        <item>Restaurants</item>
        <item>Shuttle</item>
        <item>Airline</item>
        <item>Ride sharing</item>
        <item>BreakFast</item>
        <item>Parking</item>
        <item>Fast Food</item>
        <item>Office supplies</item>
        <item>Tax</item>
        <item>Hotel</item>
        <item>Rental car</item>
        <item>Electronic</item>
        <item>Food</item>
        <item>Drink</item>
        <item>Entertainment</item>
        <item>Snacks</item>
        <item>Coffee</item>
        <item>Ice</item>
        <item>Showers</item>
        <item>Water</item>

    </string-array>
</resources>