<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    tools:context=".Authentication">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/custom_text"
        android:text="@string/app_name"
        android:layout_marginStart="30dp"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAppearance="@style/custom_text"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_color"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/edt_bg"
        android:id="@+id/username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_hint_color"
        android:background="@drawable/edt_bg">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg"
            android:backgroundTint="#0000"
            android:textColorHint="@color/text_hint_color"
            android:hint="@string/password"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:autofillHints="username"
            android:id="@+id/password"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edt_bg"
        android:textAppearance="@style/custom_text"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="40dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>