<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.HomeFragment">

    <TextView
        android:id="@+id/reimburse_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_be_reimbursed"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/custom_text"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reimburse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/custom_text"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/reimburse_title"
        app:layout_constraintTop_toBottomOf="@id/reimburse_title"
        tools:text="$ 1,020.00" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        tools:listitem="@layout/item_expense_cell"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reimburse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/add"
        android:backgroundTint="@color/primary_dark"
        android:src="@drawable/ic_add"
        app:fabCustomSize="55dp"
        android:tint="@color/white"
        app:tint="@color/white"
        android:contentDescription="@string/add_employee" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:clickable="true"
        android:visibility="gone"
        android:id="@+id/options"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:translationZ="10dp">
        <TextView
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="@style/custom_text"
            android:text="@string/add_expense"
            android:paddingVertical="20dp"/>

        <TextView
            android:id="@+id/employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="@style/custom_text"
            android:text="@string/add_employee"
            android:paddingVertical="20dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>