<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    tools:context=".presentation.screen.AddExpenseFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/merchant"
                android:textAppearance="@style/custom_text"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="@id/expenseType"
                app:layout_constraintTop_toTopOf="parent" />


            <AutoCompleteTextView
                android:id="@+id/expenseType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="4dp"
                android:background="@color/text_hint_color"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down"
                android:focusable="false"
                android:fontFamily="@font/poppins_medium"
                android:hint="@array/expenses"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAppearance="@style/custom_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/Total"
                android:textAppearance="@style/custom_text"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/expenseType" />
            

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="4dp"
                android:background="@color/text_hint_color"
                android:ems="10"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/ic_dollar"
                android:inputType="numberDecimal"
                android:drawablePadding="20dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="10dp"
                android:textAppearance="@style/custom_text"
                android:autofillHints="amount"
                android:drawableTint="@color/grey"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/date"
                android:textAppearance="@style/custom_text"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="@id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/amount" />

            <TextView
                android:id="@+id/expenseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="4dp"
                android:background="@color/text_hint_color"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:focusable="false"
                android:textAppearance="@style/custom_text"
                tools:ignore="HardcodedText"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:drawableTint="@color/grey"
                app:drawableEndCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/comment"
                android:textAppearance="@style/custom_text"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="@id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/expenseDate" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="4dp"
                android:background="@color/text_hint_color"
                android:ems="10"
                android:textCursorDrawable="@null"
                android:gravity="start|top"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:autofillHints="" />


            <TextView
                android:id="@+id/select_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/select_receipt"
                android:textAllCaps="false"
                android:textAppearance="@style/custom_text"
                android:textSize="18sp"
                android:background="@color/primary_dark"
                android:padding="20dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/comments"
                app:layout_constraintTop_toBottomOf="@+id/comments"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/receipt"
                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/select_receipt"
                android:visibility="gone"
                android:scaleType="centerCrop"
                android:src="@drawable/football"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintBottom_toTopOf="@id/saveExpense"
                app:layout_constraintStart_toStartOf="@id/select_receipt"
                app:layout_constraintTop_toBottomOf="@id/select_receipt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveExpense"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/roundedcorner_btn"
                android:backgroundTint="@color/primary_dark"
                android:text="@string/save"
                android:textAppearance="@style/custom_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="14dp"
                android:paddingEnd="8dp"
                android:paddingStart="1dp"
                android:drawableEnd="@drawable/roundedcorner_backicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>